# ai-cockpit

./: .gitignore  README.md  build.bat  config.yaml  docker-compose.yml
.github/workflows/: build.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/accounts/: health.py  manager.py
backend/app/api/: accounts.py  instances.py  workflows.py  ws.py
backend/app/browser/: instance.py  pool.py
backend/app/browser/adapters/: base.py  chatgpt.py  deepseek.py  doubao.py  gemini.py  lmarena.py  registry.py
backend/app/utils/: dom.py  event_bus.py  screenshot.py  template.py
backend/app/workflow/: bus.py  engine.py  runner.py  templates.py
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: useInstances.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Accounts.tsx  CompareView.tsx  Dashboard.tsx  LiveView.tsx  WorkflowEditor.tsx
frontend/src/stores/: instanceStore.ts
templates/: README.md
